<resources>
    <string name="app_name">SmartZone</string>
    <string name="register_title">Create Your Account</string>
    <string name="login_title">Login to SmartZone</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="birth_date">Date of Birth</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="login_link">Already have an account? Log in</string>
    <string name="register_link">Do not have an account? Register</string>
    <string name="education_level_prompt">Select education level</string>
    <string-array name="education_levels">
        <item>High School</item>
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>PhD</item>
        <item>Other</item>
    </string-array>
    <string-array name="sort_options">
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>
    <string name="profile_name">Profile</string>
    <string name="footer">SmartZone © 2025</string>
    <string name="logout">Logout</string>
    <string name="save_button">Save profile</string>
    <string name="change_password_button">Change password</string>
    <string name="delete_button">Delete account</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_password_hint">Confirm account</string>
    <string name="search_zones_hint">Search zones\u2026</string>
    <string name="add_new_zone_des">Add new zone</string>
    <string name="zone_name">Name zone</string>
    <string name="zone_focus">Focus (e.g. subject)</string>
    <string name="zone_created_at">Created at</string>
    <string name="add_new_zone_header">Add new zone</string>
    <string name="edit_des">edit</string>
    <string name="delete_des">delete</string>
    <string name="notes">Notes</string>
    <string name="documents">Documents</string>
    <string name="add_button">add</string>
    <string name="save_edit">SAVE</string>
    <string name="note_title">Note title</string>
    <string name="note">Note content</string>
    <string name="document_name">document name</string>
    <string name="uploaded">Uploaded: /u2026</string>
    <string name="preview">Short preview/u2026</string>
    <string name="open_calendar">Open calendar</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>