<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            card_view:cardBackgroundColor="@color/primaryBlue"
            card_view:cardCornerRadius="60dp"
            card_view:cardElevation="20dp">

            <ImageView
                android:id="@+id/appIconImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/studying" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="32dp"
            android:text="@string/login_title"
            android:textColor="@color/primaryBlue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primaryBlue"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"

            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/primaryBlue"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/textPrimary" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primaryBlue"
            android:text="@string/login_button"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/goToRegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_link"
            android:textColor="@color/textSecondary"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
