<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zone_add_background">

    <EditText
        android:id="@+id/noteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:backgroundTint="@color/secondaryBlue"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/noteContentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note"
        android:minLines="3"
        android:maxLines="6"
        android:gravity="top"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"
        android:backgroundTint="@color/secondaryBlue"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:textColor="@color/textSecondary"
            android:padding="12dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/saveNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_edit"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>
