<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@drawable/zone_add_background"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noteDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/note_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/textPrimary"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/noteDialogContent"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/note"
            android:textSize="16sp"
            android:textColor="@color/textSecondary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelEditButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@android:string/cancel"
                android:textColor="@color/textSecondary"
                android:padding="12dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/saveEditButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/save_edit"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
